--- a/index.html
+++ b/index.html
@@ -230,6 +230,7 @@
   </template>
 
   <script src="https://unpkg.com/nouislider@14.6.3/distribute/nouislider.min.js"></script>
+  <script src="vendor/pristine/pristine.min.js"  type="text/javascript"></script>
   <script src="./js/main.js" type="module"></script>
 </body>
 </html>
